minor spacing corrections

--- a/style.css
+++ b/style.css
@@ -127,7 +127,8 @@ a {
     list-style-type: lower-latin;
 }
 #article-title {
-    margin-top: 10%;
+    margin-top: 3.5%;
+    margin-bottom: 2%;
     
 }
 
